--- a/index.html
+++ b/index.html
@@ -1,1 +1,167 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ojitos lindos, ¿Quieres ser mi San Valentín? ❤️</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600&display=swap');
 
+        /* Fondo y Estilo Global */
+        body {
+            background: linear-gradient(to bottom, #ff99cc, #ff66b2);
+            font-family: 'Poppins', sans-serif;
+            color: #fff;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            overflow: hidden;
+            position: relative;
+        }
+
+        /* Corazones flotantes */
+        .heart {
+            position: absolute;
+            color: #ff4d6d;
+            font-size: 30px;
+            animation: floating 6s linear infinite;
+            opacity: 0.6;
+        }
+
+        @keyframes floating {
+            0% { transform: translateY(0px) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-100vh) rotate(360deg); opacity: 0; }
+        }
+
+        /* Contenedor Principal */
+        .container {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            border-radius: 25px;
+            box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            max-width: 400px;
+            position: relative;
+            z-index: 2;
+            transition: all 0.5s ease;
+            border: 5px dashed #ff4d6d;
+        }
+
+        /* Corazones decorativos en el marco */
+        .heart-decor {
+            position: absolute;
+            font-size: 25px;
+            color: #ff4d6d;
+        }
+
+        .heart-decor.top-left { top: -10px; left: -10px; }
+        .heart-decor.top-right { top: -10px; right: -10px; }
+        .heart-decor.bottom-left { bottom: -10px; left: -10px; }
+        .heart-decor.bottom-right { bottom: -10px; right: -10px; }
+
+        /* Título */
+        h1 {
+            font-size: 2rem;
+            font-family: 'Pacifico', cursive;
+            color: #ff4d6d;
+            margin-bottom: 20px;
+        }
+
+        /* Botones */
+        .buttons {
+            margin-top: 20px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 14px 28px;
+            margin: 12px;
+            font-size: 18px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            font-family: 'Pacifico', cursive;
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+            transition: 0.3s ease;
+        }
+
+        /* Botón "Sí" */
+        .yes {
+            background-color: #ff4d6d;
+            color: white;
+            box-shadow: 0px 6px 15px rgba(255, 77, 109, 0.4);
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .yes:hover {
+            background-color: #ff1a4c;
+            transform: scale(1.1);
+        }
+
+        /* Botón "No" */
+        .no {
+            background-color: #ccc;
+            color: black;
+            font-size: 18px;
+            transition: transform 0.3s, font-size 0.3s;
+        }
+
+        .no:hover {
+            background-color: #e1e1e1;
+        }
+
+        /* Mensaje final decorado */
+        .final-message {
+            display: none;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 35px;
+            border-radius: 25px;
+            box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.1);
+            max-width: 450px;
+            margin-top: 30px;
+            color: #ff4d6d;
+            font-size: 1.5rem;
+            font-family: 'Pacifico', cursive;
+            text-align: center;
+            border: 5px dashed #ff4d6d;
+            position: relative;
+        }
+
+        .final-message h2 {
+            margin-bottom: 15px;
+        }
+
+        .heart-message {
+            font-size: 2rem;
+        }
+
+    </style>
+</head>
+<body>
+
+    <!-- Corazones flotantes -->
+    <script>
+        function createHeart() {
+            const heart = document.createElement("div");
+            heart.innerHTML = "❤️";
+            heart.classList.add("heart");
+            heart.style.left = Math.random() * 100 + "vw";
+            heart.style.animationDuration = Math.random() * 3 + 3 + "s";
+            heart.style.fontSize = Math.random() * 20 + 30 + "px";
+            document.body.appendChild(heart);
+
+            setTimeout(() => {
+                heart.remove();
+            }, 6000);
+        }
+
+        setInterval(createHeart, 500);
+    </script>
+
+    <div class="container" id="mainContainer">
+        <h1 id="question">Ojitos lindos, ¿quieres ser mi San Valentín? ❤️</h1>
+        <div class="buttons">
+            <button class="btn yes" id="yesButton" onclick="aceptar()">¡Sí,
